--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "check:astro": "astro check"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.1.3",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.2",
     "@astrolib/analytics": "^0.6.1",
@@ -25,8 +26,10 @@
     "astro": "^5.12.9",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
+    "firebase": "^12.9.0",
     "limax": "4.1.0",
     "lodash.merge": "^4.6.2",
+    "preact": "^10.28.3",
     "unpic": "^4.1.3"
   },
   "devDependencies": {
